Revision history for Hailo

{{$NEXT}}

0.50 2010-05-30 12:44:25

    - Hailo hadn't been installed with the hailo command-line script
      since release 0.34. Now it's built with MakeMaker::Awesome 0.08
      with fixes this error.

    - Fix the script compilation test in t/01_compile.t. Test::Script
      renamed its script_compiles function to script_compiles_ok.

0.49 2010-05-29 19:20:26

    - Term::Sk fixed RT #57902 and RT #57903 which I reported. hailo's
      progress bar now looks better as a result.

0.48 2010-05-29 15:16:18

    - The hailo(1) command-line interface now has a much better
      interface. It now supports SQLite-like command syntax, and has a
      built-in help system.

    - Replace fortune(1) in hailo's --examples output with bot-training(1)

0.47 2010-05-29 13:08:51

    - Optimize Hailo::Tokenizer::Words to use less subroutine calls in
      critical code. Changed the time being spent in that file from
      5.14s to 3.72s out of a total runtime of 35.6s when running
      t/hailo/real_workload.t.

    - The initial tokenizer class is now saved as metadata to the
      database, and loaded into Hailo from existing brains.

      This means that this now works as expected:

          hailo --brain db.sqlite --tokenizer Chars --train file.trn 
          hailo --brain db.sqlite --reply foo

      I.e. Hailo will note that it used the Chars tokenizer in the
      database, and load the correct tokenizer in the future. However
      this will cause Hailo to die:

          hailo --brain db.sqlite --tokenizer Chars --train file.trn 
          hailo --brain db.sqlite --tokenizer Words --reply foo

      It spots that you've explicitly said you want a tokenizer that's
      incompatible with the one in the database for doing replies and
      dies. This is what it did before if you did the exact same thing
      with the --order switch.

    - Rename tests file in t/ to drop the DBD- prefix. Tests like