@@ -28,8 +28,10 @@ File::Spec::Functions     = 0
 ;; Depend on Mouse and Moose, we can use either one
 
 ; Mouse
-Mouse                     = 0.50
+Mouse                     = 0.62
+MouseX::StrictConstructor = 0.02
 MouseX::Getopt            = 0.2601
+
 ; Moose
 Moose                     = 0.94
 MooseX::StrictConstructor = 0.08
