@@ -3,11 +3,7 @@ package Hailo::Tokenizer::Words;
 use 5.010;
 use utf8;
 use Any::Moose;
-BEGIN {
-    return unless Any::Moose::moose_is_preferred();
-    require MooseX::StrictConstructor;
-    MooseX::StrictConstructor->import;
-}
+use Any::Moose 'X::StrictConstructor';
 use Regexp::Common qw/ URI /;
 use namespace::clean -except => 'meta';
 
